Fixed FAQ heading overflow.

--- a/styles/main.css
+++ b/styles/main.css
@@ -206,6 +206,7 @@ iframe {
   background-color: #9ebc9e;
   width: 100%;
   margin: none;
+  box-sizing: border-box;
 }
 
 .faq-label {
